<resources>
    <string name="app_name">News App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    
    <!-- News Sources -->
    <string name="menu_bbc">BBC News</string>
    <string name="menu_al_jazeera">Al Jazeera</string>
    <string name="menu_cnn">CNN</string>
    <string name="menu_fox_news">Fox News</string>
    <string name="menu_sky_news">Sky News</string>
    <string name="menu_ny_times">New York Times</string>
    
    <!-- Web View -->
    <string name="news_loading">Loading news...</string>
    <string name="news_error">Failed to load news. Please check your internet connection.</string>
    <string name="news_retry">Retry</string>
</resources>